# spica-photo-viewer

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_SPEC.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.claude/: settings.json
.claude/commands/: commit.md  create-pr.md
.claude/hooks/: format.mjs  play-sound.mjs
.claude/rules/: zustand-store.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  dependabot-auto-merge.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  design_patterns_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
docs/onboarding/: 01-setup.md  02-architecture.md  03-rust-essentials.md  04-tauri-basics.md  05-backend-walkthrough.md  06-frontend-walkthrough.md  07-testing.md  08-development-workflow.md  09-hands-on-final.md  README.md
scripts/: sync-version.cjs
specs/001-picasa-photo-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-picasa-photo-viewer/contracts/: rust-commands.rs  tauri-commands.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test_utils.rs
src-tauri/src/commands/: cache.rs  file.rs  mod.rs  window.rs
src-tauri/src/utils/: image.rs
src/__tests__/: setup.ts
src/components/: AboutDialog.tsx  DropZone.tsx  FileOpenButton.tsx  ImageViewer.tsx  ThumbnailBar.tsx
src/components/__tests__/: AboutDialog.test.tsx  FileOpenButton.test.tsx  ImageViewer.test.tsx  ThumbnailBar.test.tsx
src/constants/: timing.ts
src/hooks/: useCacheManager.ts  useFileDrop.ts  useImagePreloader.ts  useKeyboard.ts  useThumbnailGenerator.ts  useWindowState.ts
src/hooks/__tests__/: useImagePreloader.test.ts  useKeyboard.test.ts  useThumbnailGenerator.test.ts
src/store/: index.ts
src/store/__tests__/: index.test.ts
src/types/: index.ts
src/utils/: path.ts  testFactories.ts  testUtils.tsx
src/utils/__tests__/: path.test.ts
